# ChangeLog for dev-libs/dietlibc
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/dietlibc/ChangeLog,v 1.35 2004/08/14 04:58:49 weeve Exp $

  13 Aug 2004; Jason Wever <weeve@gentoo.org> dietlibc-0.25.ebuild:
  Stable on sparc.

  07 Aug 2004; <solar@gentoo.org> :
  Made dietlibc propolice/ssp aware on arches sparc/sparc64/x86_64/i386. Also
  made feeble attempt to version bump to 0.27 but that failed something fierce

  19 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> dietlibc-0.23.ebuild:
  || die for sparc's make in src_compile().

*dietlibc-0.26 (18 Jul 2004)

  18 Jul 2004; Daniel Black <dragonheart@gentoo.org> +dietlibc-0.26.ebuild
  dietlibc-0.24.ebuild, dietlibc-0.25.ebuild:
  version bump as per bug #54790. May not work properly. No 3.4 patch applied -
  wasn't sure if necessary. x86 stable for 0.24 and 0.25

  01 Jun 2004; Mike Frysinger <vapier@gentoo.org> +files/0.25-gcc34.patch,
  dietlibc-0.25.ebuild:
  Add gcc-3.4 patch #51053 by Imad R. Faiad.

*dietlibc-0.25 (29 May 2004)

  29 May 2004; Travis Tilley <lv@gentoo.org> +dietlibc-0.25.ebuild:
  version bump - works with gcc 3.4

  25 Mar 2004; Jason Wever <weeve@gentoo.org> dietlibc-0.24.ebuild:
  Added fix for bug #45716.

  25 Mar 2004; Jason Wever <weeve@gentoo.org> dietlibc-0.24.ebuild,
  files/dietlibc-sparc64-makefile.patch:
  Fix for bug #45601 and adjusted Makefile so that the usage of the sparc32
  command isn't needed anymore.

  19 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org> dietlibc-0.23.ebuild,
  dietlibc-0.24.ebuild, files/gcc-33.patch:
  add patch from Frank Eibisch to correct wrapper not to use old options for gcc
  3 (bug #41763); some repoman cleanup

  17 Feb 2004; David Holm <dholm@gentoo.org> dietlibc-0.24.ebuild:
  Added to ~ppc.

  14 Dec 2003; Alexander Gabert <pappy@gentoo.org> dietlibc-0.24.ebuild:
  added filter-flags logic for propolice
