@@ -1,24 +1,24 @@
-MD5 fe03560f9e5ba5df0c695994c5b1c538 ChangeLog 4967
-MD5 38e3d6d5a07b52b28a667d850d3cfe1c dietlibc-0.22-r2.ebuild 1667
+MD5 92ee3a5ce823df484a1d6d90044fa07c dietlibc-0.26-r1.ebuild 1933
 MD5 5100407ec03ec6e53d0b8507ed73a18d dietlibc-0.23.ebuild 1766
-MD5 6d7429e88eda74e2e5a1d89dcda32c33 metadata.xml 400
-MD5 3094bbd430e85329034c7a7cc26e49e7 dietlibc-0.24.ebuild 1527
 MD5 9965e918f84bd03b15f4a22ba092d8c5 dietlibc-0.25.ebuild 1564
+MD5 38e3d6d5a07b52b28a667d850d3cfe1c dietlibc-0.22-r2.ebuild 1667
+MD5 3094bbd430e85329034c7a7cc26e49e7 dietlibc-0.24.ebuild 1527
+MD5 62809adc0f6b86ea26c2477ff9e19491 ChangeLog 5274
+MD5 6d7429e88eda74e2e5a1d89dcda32c33 metadata.xml 400
 MD5 8de66752df8ab2859aa5fa2a544a09b7 dietlibc-0.26.ebuild 1573
-MD5 fe7b2b9d20c36184dfdd9b3ef2c9158d dietlibc-0.26-r1.ebuild 1903
-MD5 e33c0d8f3c56f85d1caa98118824fceb files/0.22-dirent-prototype.patch 563
-MD5 2d0f660abd258d75417ef8abd8ab5eb7 files/0.23-dirent-prototype.patch 668
-MD5 2d0f660abd258d75417ef8abd8ab5eb7 files/0.24-dirent-prototype.patch 668
-MD5 67b93dd4033c0e66d42b6bade33c73fc files/dietlibc-0.22_xdr_security_fix.patch 5566
+MD5 8c25662fd30d966f24ec20ef491075a6 files/dietlibc-sparc64-makefile.patch 499
 MD5 4713f8664ff94fb53c7696d9204406ed files/dietlibc-0.23-hppa.patch 3954
+MD5 8dcca4f3b79565a3c205dbb0ef2d20bd files/ssp.c 4038
 MD5 2644f8611fcb7a147ec9ef76eaf5992a files/digest-dietlibc-0.22-r2 66
+MD5 4c8bea996353605b5d0b6184d8836ffe files/digest-dietlibc-0.26-r1 66
+MD5 67b93dd4033c0e66d42b6bade33c73fc files/dietlibc-0.22_xdr_security_fix.patch 5566
+MD5 9022467ec4210d62330f0eb1d8c93394 files/dietlibc-0.26-ssp.patch 1632
+MD5 9247251c0adc5ce1b626d7092ae0c903 files/gcc-33.patch 482
+MD5 2d0f660abd258d75417ef8abd8ab5eb7 files/0.24-dirent-prototype.patch 668
+MD5 2d0f660abd258d75417ef8abd8ab5eb7 files/0.23-dirent-prototype.patch 668
+MD5 e33c0d8f3c56f85d1caa98118824fceb files/0.22-dirent-prototype.patch 563
 MD5 b06d21ffc62c7a660a29351e55213a0b files/digest-dietlibc-0.23 66
 MD5 11048a235efe4eefcfffc4ccffa60821 files/digest-dietlibc-0.24 66
-MD5 9247251c0adc5ce1b626d7092ae0c903 files/gcc-33.patch 482
-MD5 8c25662fd30d966f24ec20ef491075a6 files/dietlibc-sparc64-makefile.patch 499
 MD5 a6911c79e510ea03173a809f5d7e6a40 files/digest-dietlibc-0.25 66
-MD5 02d59156de2a7a0f914dc5769e26cdcf files/0.25-gcc34.patch 3454
 MD5 4c8bea996353605b5d0b6184d8836ffe files/digest-dietlibc-0.26 66
-MD5 5068166c23e6910d2d2d6121ded46382 files/dietlibc-0.26-ssp.patch 1596
-MD5 4c8bea996353605b5d0b6184d8836ffe files/digest-dietlibc-0.26-r1 66
-MD5 8dcca4f3b79565a3c205dbb0ef2d20bd files/ssp.c 4038
+MD5 02d59156de2a7a0f914dc5769e26cdcf files/0.25-gcc34.patch 3454
